--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,10 @@ h1, h2 {
         margin-bottom: 50px;
     }
 
+    .right-about-heading h2 {
+        text-align: right;
+    }
+    
     .right-about-heading p {
         text-align: right;
     }
