--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,126 +91,163 @@ h1, h2 {
         }
     }
 
-    #cover-text {
-        font-size: 130%;
-        font-family: Oswald, sans-serif; 
-        text-transform: uppercase;
-        letter-spacing: 4px;
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif; 
+    text-transform: uppercase;
+    letter-spacing: 4px;
 
-        width: 300px;
-        height: 200px;
+    width: 300px;
+    height: 200px;
 
-        padding-top: 40px;
-        padding-left: 10px;
+    padding-top: 40px;
+    padding-left: 10px;
 
-        background-color: rgba(241, 109, 107, .7);
+    background-color: rgba(241, 109, 107, .7);
 
-        bottom: 30px;
-        right: 150px;
+    bottom: 30px;
+    right: 150px;
 
-        position: absolute;
+    position: absolute;
+
     }
 
     /* club ethos */
 
-    #club-ethos {
-        height: 600px;
-    }
+#club-ethos {
+    height: 600px;
 
-    #left-about {
-        padding-top: 30px;
-        width:33%;
-        float: left;
+}
+
+#left-about {
+    padding-top: 30px;
+    width:33%;
+    float: left;
         
-    }   
+}   
 
-    #right-about {
-        padding-top: 30px;
-        width:33%;
-        float: right;   
-    } 
+#right-about {
+    padding-top: 30px;
+    width:33%;
+    float: right;  
 
-    #center-about {
-        width:33%;
-        margin: 0 auto; 
-    } 
+} 
 
-    hr {
-        border-top: 1px solid #3a3a3a;
-        width: 100%;
-        margin: 5px 0;
-    }
-
-    .left-about-heading {
-        width: 60%;
-        float: right;
-        line-height: 20px;
-        clear: both;
-        margin-bottom: 50px;
-    }
-
-    .right-about-heading {
-        width: 60%;
-        float: left;
-        line-height: 20px;
-        clear: both;
-        margin-bottom: 50px;
-    }
-
-    .right-about-heading h2 {
-        text-align: right;
-    }
+#center-about {
+    width:33%;
+    margin: 0 auto; 
     
-    .right-about-heading p {
-        text-align: right;
-    }
+} 
 
-    #welcome {
-        text-align: center;
-        margin: 20px;
-        font-size: 280%; 
-    }
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
 
-    #circle-container {
-        width: 300px;
-        height: 300px;
-        padding: 30px;
-        border-style: solid;
-        border-color: #ccc;
-        border-width: 1px;
-        border-radius: 50%;
-        margin: 0 auto;
-    }
+}
 
-    #circle-cover-bg {
-        background: url('../images/ethos-center-image.jpeg') no-repeat center center;
-        height: 100%;
-        border-radius: 50%;
-    }
+.left-about-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+    
+}
+
+.right-about-heading {
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+    
+}
+
+.right-about-heading h2 {
+    text-align: right;
+    
+}
+    
+.right-about-heading p {
+    text-align: right;
+
+}
+
+#welcome {
+    text-align: center;
+    margin: 20px;
+    font-size: 280%; 
+    
+}
+
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+    
+}
+
+#circle-cover-bg {
+    background: url('../images/ethos-center-image.jpeg') no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
+    
+}
 
     /* event times */
 
-    #times {
-        background-image: url('../images/dublin-city.webp');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        width: 100%;
-        overflow: hidden;
-    }
+#times {
+    background-image: url('../images/dublin-city.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    overflow: hidden;
+    
+}
 
-    #times div {
-        color: #fafafa;
-        background-color: rgba(0, 0, 0, .6);
-        width: 20%;
-        height: 300px;
-        float: left;
-        padding: 30px 0 0 10px;
-        text-align: center;
-        border: 2px solid white;
-        box-sizing: border-box;
-    }
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    width: 20%;
+    height: 300px;
+    float: left;
+    padding: 30px 0 0 10px;
+    text-align: center;
+    border: 2px solid white;
+    box-sizing: border-box;
+    
+}
 
-    #times h2 {
-        color:#fafafa
-    }
+ #times h2 {
+    color:#fafafa
+}
+
+/* footer */
+
+footer {
+    height: 150px;
+}
+
+.social-networks {
+    text-align: center;
+}
+
+.social-networks > li {
+    display: inline
+}
+
+.social-networks i {
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: #3a3a3a;
+          
+}
+
