--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,6 +294,14 @@ footer {
     hr {
         display: none;
     }
+
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+
+    }
 }          
 
 /* For medium screens size from 950px wide and down */
